# nonergodicGMM

./: .gitignore  pyproject.toml
dynamicgmm/: datastore.py
dynamicgmm/download/: download_utils.py  esm_fdsn_tools.py  main_download.py
dynamicgmm/ergodic/: gmms.py
dynamicgmm/metadata/: earthquake_catalogue.py  moment_tensor_database.py
dynamicgmm/metadata/emec_lite/: magnitude_conversions.py
dynamicgmm/metadata/emec_lite/emec_polygons/: polygons.dbf  polygons.shp  polygons.shx
dynamicgmm/nonergodic/: ergodic_gmms.py  grid_tools.py  kernels.py  nonergodic_gmm_fit_INLA.R  nonergodic_gmm_fitting_INLA_workflow.py
dynamicgmm/process/: asdf.py
